--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "build": "sucrase ./src -d ./dist --transforms imports",
-    "queue": "nodemon src/queue.js"
+    "queue": "nodemon src/queue.js",
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "@sentry/node": "5.5.0",
